--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "4                5                 1       23000    low_risk  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -184,7 +184,7 @@
        "Name: homeowner, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -317,13 +317,13 @@
        "4                 1       23000    low_risk                   1              0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#dreate a dummy variable for homeowner variable\n",
+    "# create a dummy variable for the homeowner variable\n",
     "df_encoded = pd.get_dummies(df, columns = ['homeowner'])\n",
     "df_encoded.head()\n",
     "\n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -351,12 +351,12 @@
     "X = df2.drop(columns = [\"loan_status\"])\n",
     "\n",
     "# Create our target\n",
-    "y = df[[\"loan_status\"]]"
+    "y = df2[[\"loan_status\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "4    low_risk"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "max         1.000000  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,13 +678,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Scale the training and testing data\n",
-    "X_train_scaled = X_scaler.transform(X_train)\n",
-    "X_test_scaled = X_scaler.transform(X_test)"
+    "X_train = X_scaler.transform(X_train)\n",
+    "X_test = X_scaler.transform(X_test)"
    ]
   },
   {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,16 +718,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9543211898288821"
+       "0.9892813049736127"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,17 +741,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  571,    54],\n",
-       "       [   93, 18666]], dtype=int64)"
+       "array([[  615,    10],\n",
+       "       [  102, 18657]], dtype=int64)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -773,10 +773,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.86      0.91      1.00      0.89      0.95      0.90       625\n",
-      "   low_risk       1.00      1.00      0.91      1.00      0.95      0.92     18759\n",
+      "  high_risk       0.86      0.98      0.99      0.92      0.99      0.98       625\n",
+      "   low_risk       1.00      0.99      0.98      1.00      0.99      0.98     18759\n",
       "\n",
-      "avg / total       0.99      0.99      0.92      0.99      0.95      0.92     19384\n",
+      "avg / total       0.99      0.99      0.98      0.99      0.99      0.98     19384\n",
       "\n"
      ]
     }
@@ -813,55 +813,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'loan_status': 1})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the training data with the RandomOversampler\n",
-    "# YOUR CODE HERE\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
     "\n",
     "# View the count of target classes with Counter\n",
-    "# YOUR CODE HERE"
+    "ros = RandomOverSampler(random_state=1)\n",
+    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)\n",
+    "#print(\"Resampled DataSet shape %'s\" % Counter(y_resampled))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_status\n",
+       "high_risk      56277\n",
+       "low_risk       56277\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "y_resampled.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "model_ros = LogisticRegression(solver = 'lbfgs', random_state = 1)\n",
+    "model_ros.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9892813049736127"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# balanced accuracy score\n",
+    "y_pred_ros = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred_ros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  615,    10],\n",
+       "       [  102, 18657]], dtype=int64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred_ros)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.86      0.98      0.99      0.92      0.99      0.98       625\n",
+      "   low_risk       1.00      0.99      0.98      1.00      0.99      0.98     18759\n",
+      "\n",
+      "avg / total       0.99      0.99      0.98      0.99      0.99      0.98     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred_ros))"
    ]
   },
   {
@@ -873,55 +961,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'loan_status': 1})"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the training data with SMOTE\n",
-    "# YOUR CODE HERE\n",
+    "from imblearn.over_sampling import SMOTE \n",
+    "\n",
+    "X_resampled2, y_resampled2 = SMOTE(random_state = 1, sampling_strategy = 1.0).fit_resample(\n",
+    "    X_train, y_train\n",
+    ")\n",
     "\n",
     "# View the count of target classes with Counter\n",
-    "# YOUR CODE HERE"
+    "Counter(y_resampled2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_status\n",
+       "high_risk      56277\n",
+       "low_risk       56277\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_resampled.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model_smote = LogisticRegression(solver = 'lbfgs', random_state = 1)\n",
+    "model_smote.fit(X_resampled2, y_resampled2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9946414201183431"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = model_smote.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  622,     3],\n",
+       "       [  111, 18648]], dtype=int64)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.85      1.00      0.99      0.92      0.99      0.99       625\n",
+      "   low_risk       1.00      0.99      1.00      1.00      0.99      0.99     18759\n",
+      "\n",
+      "avg / total       0.99      0.99      1.00      0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -948,10 +1126,22 @@
    "outputs": [],
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
-    "# YOUR CODE HERE\n",
+    "\n",
+    "from imblearn.under_sampling import ClusterCentroids\n",
+    "cc = ClusterCentroids(random_state = 1)\n",
+    "X_resampeld, y_resampled = cc.fit_resample(X_train, y_train)\n",
     "\n",
     "# View the count of target classes with Counter\n",
-    "# YOUR CODE HERE"
+    "Counter(y_resampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train.value_counts()"
    ]
   },
   {
@@ -961,7 +1151,8 @@
    "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model_rus = LogisticRegression(solver = 'lbfgs', random_state = 1)\n",
+    "model_rus.fit(X_resampled2, y_resampled2)"
    ]
   },
   {
@@ -971,7 +1162,8 @@
    "outputs": [],
    "source": [
     "# Calculate the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = model_rus.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -981,7 +1173,7 @@
    "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -991,7 +1183,7 @@
    "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1018,10 +1210,21 @@
    "outputs": [],
    "source": [
     "# Resample the training data with SMOTEENN\n",
-    "# YOUR CODE HERE\n",
+    "from imblearn.under_sampling import ClusterCentroids\n",
+    "cc = ClusterCentroids(random_state = 1)\n",
+    "X_resampeld, y_resampled = cc.fit_resample(X_train, y_train)\n",
     "\n",
     "# View the count of target classes with Counter\n",
-    "# YOUR CODE HERE"
+    "Counter(y_resampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train.value_counts()"
    ]
   },
   {
@@ -1031,7 +1234,8 @@
    "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model_rus = LogisticRegression(solver = 'lbfgs', random_state = 1)\n",
+    "model_rus.fit(X_resampled2, y_resampled2)"
    ]
   },
   {
@@ -1041,7 +1245,8 @@
    "outputs": [],
    "source": [
     "# Calculate the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = model_rus.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1051,7 +1256,7 @@
    "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -1061,7 +1266,7 @@
    "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1082,13 +1287,6 @@
     "\n",
     "    YOUR ANSWER HERE.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
