--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -1121,9 +1121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'loan_status': 1})"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
     "\n",
@@ -1137,18 +1148,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_status\n",
+       "low_risk       56277\n",
+       "high_risk       1875\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_train.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "model_rus = LogisticRegression(solver = 'lbfgs', random_state = 1)\n",
@@ -1157,9 +1193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9946414201183431"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the balanced accuracy score\n",
     "y_pred = model_rus.predict(X_test)\n",
@@ -1168,9 +1215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  622,     3],\n",
+       "       [  111, 18648]], dtype=int64)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
     "confusion_matrix(y_test, y_pred)"
@@ -1178,9 +1237,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.85      1.00      0.99      0.92      0.99      0.99       625\n",
+      "   low_risk       1.00      0.99      1.00      1.00      0.99      0.99     18759\n",
+      "\n",
+      "avg / total       0.99      0.99      1.00      0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
@@ -1205,9 +1278,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'loan_status': 1})"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "from imblearn.under_sampling import ClusterCentroids\n",
@@ -1220,40 +1304,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_status\n",
+       "low_risk       56277\n",
+       "high_risk       1875\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_train.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "model_rus = LogisticRegression(solver = 'lbfgs', random_state = 1)\n",
-    "model_rus.fit(X_resampled2, y_resampled2)"
+    "model_teen = LogisticRegression(solver = 'lbfgs', random_state = 1)\n",
+    "model_teen.fit(X_resampled2, y_resampled2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9946414201183431"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the balanced accuracy score\n",
-    "y_pred = model_rus.predict(X_test)\n",
+    "y_pred = model_teen.predict(X_test)\n",
     "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  622,     3],\n",
+       "       [  111, 18648]], dtype=int64)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
     "confusion_matrix(y_test, y_pred)"
@@ -1261,9 +1393,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.85      1.00      0.99      0.92      0.99      0.99       625\n",
+      "   low_risk       1.00      0.99      1.00      1.00      0.99      0.99     18759\n",
+      "\n",
+      "avg / total       0.99      0.99      1.00      0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
@@ -1277,7 +1423,8 @@
     "\n",
     "1. Which model had the best balanced accuracy score?\n",
     "\n",
-    "   YOUR ANSWER HERE.\n",
+    "   - The Oversampling and combination sampling methods had the highest balanced accuracy score of 0.9946\n",
+    "\n",
     "\n",
     "2. Which model had the best recall score?\n",
     "\n",
@@ -1287,6 +1434,20 @@
     "\n",
     "    YOUR ANSWER HERE.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
