--- a/Starter_Code/credit_risk_ensemble.ipynb
+++ b/Starter_Code/credit_risk_ensemble.ipynb
@@ -570,8 +570,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "ename": "AttributeError",
@@ -580,7 +582,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-d9327641e949>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhardship_flag\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-28-d9327641e949>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhardship_flag\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\Anaconda3\\envs\\mlenv\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5463\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5464\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5465\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5466\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5467\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'hardship_flag'"
      ]
@@ -602,7 +604,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "ename": "KeyError",
@@ -629,7 +633,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -762,7 +772,9 @@
    "outputs": [],
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
-    "# YOUR CODE HERE"
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
+    "brf = BalancedRandomForestClassifier(n_estimators = 1000, random_states = 1)\n",
+    "brf.fit(X_train, y_train)"
    ]
   },
   {
@@ -772,7 +784,9 @@
    "outputs": [],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.meterics import balanced_accuracy_score\n",
+    "y_pred_rf = brf.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred_rf)"
    ]
   },
   {
@@ -782,7 +796,8 @@
    "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_test, y_pred_rf)"
    ]
   },
   {
@@ -792,7 +807,8 @@
    "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "y_pred_rf = brf.predict(X_test)\n",
+    "print(classification_report_imbalanced(y_test, y_pred_rf))"
    ]
   },
   {
@@ -819,7 +835,8 @@
    "outputs": [],
    "source": [
     "# Train the Classifier\n",
-    "# YOUR CODE HERE"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf_model"
    ]
   },
   {
@@ -849,7 +866,7 @@
    "outputs": [],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalaced(y_test, y_pred))"
    ]
   },
   {
