final push final

--- a/Starter_Code/credit_risk_ensemble.ipynb
+++ b/Starter_Code/credit_risk_ensemble.ipynb
@@ -1649,19 +1649,10 @@
     "\n",
     "3. Which model had the best geometric mean score?\n",
     "\n",
-    "    The Balanced Random Forrest also had the best geometric mean score\n",
+    "    The Balanced Random Forrest also had the best geometric mean score.\n",
     "\n",
-    "4. What are the top three features?\n",
-    "\n",
-    "    YOUR ANSWER HERE."
+    "4. What are the top three features"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
