--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -1428,26 +1428,12 @@
     "\n",
     "2. Which model had the best recall score?\n",
     "\n",
-    "    YOUR ANSWER HERE.\n",
+    "   - The oversampling and combination sampling methods produced the highest recall score of 0.9952\n",
     "\n",
     "3. Which model had the best geometric mean score?\n",
     "\n",
-    "    YOUR ANSWER HERE.\n"
+    "   - Every model had a geometric mean score of 0.99\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
